--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "start": "waku start --with-ssr"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.315.0",
     "react": "18.3.0-canary-c5b937576-20231219",
     "react-dom": "18.3.0-canary-c5b937576-20231219",
     "react-server-dom-webpack": "18.3.0-canary-c5b937576-20231219",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "waku": "0.19.0"
   },
   "devDependencies": {
